@@ -1,4 +1,5 @@
-SUBDIRS = @MPFI_SUBDIRS@
+ACLOCAL_AMFLAGS = -I m4
+SUBDIRS = src tests doc
 
 include_HEADERS = src/mpfi.h src/mpfi_io.h
 EXTRA_DIST = mpfi_config.h.in
