@@ -37,12 +37,19 @@ Changes between MPFI 1.3.4-RC3 and 1.4
 * bugfixes for trigonometric functions
 * add compilation for a shared library
 
-Changes between MPFI version 1.4 and ?
+Changes between MPFI version 1.4 and 1.5
 
 * new functions : Catalan's constant, cubic root, reciprocal square root,
   secant, cosecant, cotangent and hyperbolic counterparts, atan2, hypot,
   get_version, urandom
 * can now be compiled outside the source directory
+* change configure options to be consistent with the ones in MPFR and MPC:
+  --with-gmp-dir=DIR changed to --with-gmp=DIR
+  --with-gmp-libpath=DIR changed to --with-gmp-lib=DIR
+  --with-gmp-incpath=DIR changed to --with-gmp-include=DIR
+  --with-mpfr-dir=DIR changed to --with-mpfr=DIR
+  --with-mpfr-libpath=DIR changed to --with-mpfr-lib=DIR
+  --with-mpfr-incpath=DIR changed to --with-mpfr-include=DIR
 * each function is in its own file (compile_time *= 8;)
 * remove limitation to 1000 characters in mpfi_set_str.
 * fix documentation for functions mpfi_blow, mpfi_is_inside
